k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: xuneed
  labels:
    app: xuneed
    environment: production
