k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: xuneed
  labels:
    app: xuneed
    component: backend
spec:
  type: ClusterIP
  selector:
    app: xuneed
    component: backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
